--- a/conf/shark-env.sh.template
+++ b/conf/shark-env.sh.template
@@ -22,7 +22,10 @@ export SPARK_MEM=2g
 
 # Java options
 # On EC2, change the local.dir to /mnt/tmp
-export SPARK_JAVA_OPTS="-Dspark.local.dir=/tmp -Dspark.kryoserializer.buffer.mb=10  -verbose:gc -XX:-PrintGCDetails -XX:+PrintGCTimeStamps"
+SPARK_JAVA_OPTS="-Dspark.local.dir=/tmp "
+SPARK_JAVA_OPTS+="-Dspark.kryoserializer.buffer.mb=10 "
+SPARK_JAVA_OPTS+="-verbose:gc -XX:-PrintGCDetails -XX:+PrintGCTimeStamps "
+export SPARK_JAVA_OPTS
 
 # HIVE_HOME, point to Hive binary distribution
 export HIVE_HOME=""
