--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
     <deb.user>root</deb.user>
     <deb.hive.dependency>${hive.version}</deb.hive.dependency>
 
+    <ql.build.path>${hive.dev.home}/build/ql</ql.build.path>
+
     <!-- Default location, override on the command line if different -->
     <hive.dev.home>${basedir}/../hive</hive.dev.home>
     <hive.build.dir>${hive.dev.home}/build</hive.build.dir>
