--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
     <maven.compiler.target>1.7</maven.compiler.target>
     <encoding>UTF-8</encoding>
     <scala.version>2.9.2</scala.version>
-    <hive.version>0.9.0</hive.version>
+    <hive.version>0.9.0-amplab-4</hive.version>
     <spark.version>0.7.0-SNAPSHOT</spark.version>
     <cdh.version>4.1.2</cdh.version>
     <java.version>1.5</java.version>
@@ -65,6 +65,12 @@
       <id>DataNucleusRepository</id>
       <name>DataNucleus Repository</name>
       <url>http://www.datanucleus.org/downloads/maven2/</url>
+      <layout>default</layout>
+    </repository>
+    <repository>
+      <id>AMPLabHiveRepository</id>
+      <name>Temporary repository for AMP Lab Hive</name>
+      <url>http://people.apache.org/~mbautin/maven/</url>
       <layout>default</layout>
     </repository>
   </repositories>
