--- a/pom.xml
+++ b/pom.xml
@@ -214,14 +214,15 @@
       <version>${hive.version}</version>
       <optional>true</optional>
     </dependency>
+
+    <!-- Testing -->
     <dependency>
+      <!-- This is omitted from the shaded jar -->
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-log4j12</artifactId>
       <version>1.6.1</version>
       <scope>test</scope>
     </dependency>
-
-    <!-- Testing -->
     <dependency>
       <!-- This is omitted from the shaded jar -->
       <groupId>org.slf4j</groupId>
