--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,6 @@ test_warehouses
 # Ensime files for emacs
 .ensime
 .ensime_lucene
+
+# This is copied by Hive to the project directory (should be fixed)
+hive-builtins-*.jar
