--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <encoding>UTF-8</encoding>
     <scala.version>2.9.2</scala.version>
     <hive.version>0.9.0-amplab-4</hive.version>
-    <spark.version>0.7.0-SNAPSHOT</spark.version>
+    <spark.version>0.7.0</spark.version>
     <cdh.version>4.1.2</cdh.version>
     <java.version>1.5</java.version>
 
@@ -66,6 +66,11 @@
       <name>DataNucleus Repository</name>
       <url>http://www.datanucleus.org/downloads/maven2/</url>
       <layout>default</layout>
+    </repository>
+    <repository>
+      <id>cloudera</id>
+      <name>Cloudera CDH4 Maven Repository</name>
+      <url>https://repository.cloudera.com/artifactory/cloudera-repos/</url>
     </repository>
     <repository>
       <id>AMPLabHiveRepository</id>
