--- a/pom.xml
+++ b/pom.xml
@@ -44,7 +44,7 @@
     <test.jvm.args>-Xmx${test.mem} -Xms${test.mem} -XX:-UseSplitVerifier</test.jvm.args>
   </properties>
   <scm>
-    <connection>scm:git:git@github.com:clearstorydata/shark.git</connection>
+    <connection>scm:git:git://github.com/clearstorydata/shark.git</connection>
     <url>http://github.com/clearstorydata/shark/tree/master</url>
   </scm>
 
