--- a/pom.xml
+++ b/pom.xml
@@ -354,6 +354,7 @@
           <argLine>${test.jvm.args}</argLine>
           <!-- This is necessary so we can run Scala tests even if there are failures here. -->
           <testFailureIgnore>true</testFailureIgnore>
+          <enableAssertions>false</enableAssertions>
         </configuration>
       </plugin>
       <plugin>
