[maven-release-plugin] prepare release shark-0.3.0-csd-15

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
   </properties>
   <scm>
     <connection>scm:git:git://github.com/clearstorydata/shark.git</connection>
+    <developerConnection>scm:git:git@github.com:clearstorydata/shark.git</developerConnection>
     <url>http://github.com/clearstorydata/shark/tree/master</url>
   </scm>
 
