--- a/pom.xml
+++ b/pom.xml
@@ -266,7 +266,7 @@
       <plugin>
         <groupId>net.alchim31.maven</groupId>
         <artifactId>scala-maven-plugin</artifactId>
-        <version>3.1.0</version>
+        <version>3.1.5</version>
         <executions>
           <execution>
             <id>scala-compile-first</id>
@@ -382,6 +382,7 @@
           </environmentVariables>
           <systemProperties>
             <shark.test.dir>${shark.test.dir}</shark.test.dir>
+            <hive.test.dir>${hive.build.dir}</hive.test.dir>
           </systemProperties>
         </configuration>
         <executions>
