--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,8 @@
 
     <test.mem>1024m</test.mem>
     <test.jvm.args>-Xmx${test.mem} -Xms${test.mem} -XX:-UseSplitVerifier</test.jvm.args>
+
+    <shark.test.query.file>${project.basedir}/src/test/stable_tests.txt</shark.test.query.file>
   </properties>
   <scm>
     <connection>scm:git:git@github.com:clearstorydata/shark.git</connection>
@@ -333,7 +335,7 @@
           <environmentVariables>
             <HIVE_HOME>${hive.dist.dir}</HIVE_HOME>
             <HIVE_DEV_HOME>${hive.dev.home}</HIVE_DEV_HOME>
-            <TEST_FILE>${project.basedir}/src/test/tests_stable.txt</TEST_FILE>
+            <TEST_FILE>${shark.test.query.file}</TEST_FILE>
           </environmentVariables>
           <systemPropertyVariables>
             <user.dir>${hive.build.dir}</user.dir>
